pr9-diagnostic.log
error: Failed to parse src/gir_api/openapi_contract.py:121:81: missing closing quote in string literal
2 files reformatted, 132 files left unchanged
Traceback (most recent call last):
  File "/home/runner/work/geometryos/geometryos/scripts/export_openapi.py", line 12, in <module>
    from gir_api.openapi_contract import (  # noqa: E402
  File "/home/runner/work/geometryos/geometryos/src/gir_api/openapi_contract.py", line 121
    return json.dumps(document, ensure_ascii=False, indent=2, sort_keys=True) + "
                                                                                ^
SyntaxError: unterminated string literal (detected at line 121)
/home/runner/work/geometryos/geometryos/.venv/lib/python3.11/site-packages/fastapi/testclient.py:1: StarletteDeprecationWarning: Using `httpx` with `starlette.testclient` is deprecated; install `httpx2` instead.
  from starlette.testclient import TestClient as TestClient  # noqa
Traceback (most recent call last):
  File "/home/runner/work/geometryos/geometryos/scripts/export_tutorboard_contracts.py", line 18, in <module>
    from gir_api.main import create_app  # noqa: E402
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/work/geometryos/geometryos/src/gir_api/main.py", line 9, in <module>
    from gir_api.openapi_contract import install_openapi_contract
  File "/home/runner/work/geometryos/geometryos/src/gir_api/openapi_contract.py", line 121
    return json.dumps(document, ensure_ascii=False, indent=2, sort_keys=True) + "
                                                                                ^
SyntaxError: unterminated string literal (detected at line 121)
